style: fixed footer overlap issue

--- a/checker.css
+++ b/checker.css
@@ -10,6 +10,16 @@ body {
   color: #fff;
 }
 
+.mainContainer {
+  min-height: 100vh;
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .checkContainer {
   width: 100%;
   height: 100%;
@@ -17,6 +27,13 @@ body {
   flex-direction: column;
   justify-items: center;
   align-items: center;
+}
+
+@media screen and (max-width: 600px) {
+  .checkContainer img {
+    height: 250px;
+    width: 250px;
+  }
 }
 
 .container {
